Mesh from Curve not working on curves beveled by curves #56906

Closed
opened 2018-09-24 22:01:23 +02:00 by David · 26 comments

System Information
Windows 10 Pro - version 1803 - build 17134.285
Intel Core i5-3350p
Nvidia GeForce GTX 780
RAM DDR3 2x4GB 1333mhz running dual channel

Blender Version
Broken: 2.8 (Downloaded 21. 09. 2018)
Worked: 2.79

Short description of error
Object Mode > Object > Transform > Mesh from Curve\Meta\Surf\Text
When applied to a curve directly beveled by shape of another curve, it does not create a mesh, only turns the original curve into edges.

Exact steps for others to reproduce the error

  • open new file
  • add two bezier curve circles, one bigger and one smaller
  • go to properties panel of the big circle > object data > bevel > choose the second smaller circle as object
  • in the same menu move the "bevel start" slider to make the bevel appear, you should have a torus now
  • in 3D view in object mode go to Object > Transform > Mesh from Curve\Meta\Surf\Text
  • RESULT IN 2.8: Turns the curve into circle of vertices, not a torus mesh.

RESULT IN 2.79b: Turns the curve into a torus-shaped mesh.

**System Information** Windows 10 Pro - version 1803 - build 17134.285 Intel Core i5-3350p Nvidia GeForce GTX 780 RAM DDR3 2x4GB 1333mhz running dual channel **Blender Version** Broken: 2.8 (Downloaded 21. 09. 2018) Worked: 2.79 **Short description of error** Object Mode > Object > Transform > Mesh from Curve\Meta\Surf\Text When applied to a curve directly beveled by shape of another curve, it does not create a mesh, only turns the original curve into edges. **Exact steps for others to reproduce the error** - open new file - add two bezier curve circles, one bigger and one smaller - go to properties panel of the big circle > object data > bevel > choose the second smaller circle as object - in the same menu move the "bevel start" slider to make the bevel appear, you should have a torus now - in 3D view in object mode go to Object > Transform > Mesh from Curve\Meta\Surf\Text - **RESULT IN 2.8: Turns the curve into circle of vertices, not a torus mesh.** # **RESULT IN 2.79b: Turns the curve into a torus-shaped mesh.**
Author

Added subscriber: @dligac

Added subscriber: @dligac

#58057 was marked as duplicate of this issue

#58057 was marked as duplicate of this issue

#57676 was marked as duplicate of this issue

#57676 was marked as duplicate of this issue

Added subscriber: @mont29

Added subscriber: @mont29

Please follow our submission template and guidelines, also read these tips about bug reports, and make a complete, valid bug report, with required info, precise description of the issue (only ONE issue per report!), precise steps to reproduce it, small and simple .blend and/or other files to do so if needed, etc.

Please follow our [submission template and guidelines](https:*developer.blender.org/maniphest/task/edit/form/1/), also read [these tips about bug reports](https:*wiki.blender.org/wiki/Process/Bug_Reports), and make a complete, valid bug report, with required info, precise description of the issue (only ONE issue per report!), precise steps to reproduce it, **small and simple** .blend and/or other files to do so if needed, etc.

Added subscriber: @zeauro

Added subscriber: @zeauro

I can reproduce. There is no crash.
Beveled_Circle.blend

I don't think we can consider beveled curves as a restored feature, yet.
You propose to change Bevel Start value to force update of display of torus. But if start value is up to zero, torus should not be displayed as a complete torus.

I can reproduce. There is no crash. [Beveled_Circle.blend](https://archive.blender.org/developer/F4985377/Beveled_Circle.blend) I don't think we can consider beveled curves as a restored feature, yet. You propose to change Bevel Start value to force update of display of torus. But if start value is up to zero, torus should not be displayed as a complete torus.
Author

I missed the "don't post bugs for 2.8 unless crashing" rule. So it shouldn't be here.
However I don't know what are you talking about anyway. I have trouble turning curve into a mesh. That's the reason I posted it here. So I don't propose anyting regarding bevel start value and blah blah, I propose that curve to mesh works just like in 2.79. Get it?

I missed the "don't post bugs for 2.8 unless crashing" rule. So it shouldn't be here. However I don't know what are you talking about anyway. I have trouble turning curve into a mesh. That's the reason I posted it here. So I don't propose anyting regarding bevel start value and blah blah, I propose that curve to mesh works just like in 2.79. Get it?

I got it. I was just explaining that mesh from curve is not the only thing about curve that does not work as it should. Beveled Curves are not supposed to behave like that.
And several other things don't work as they should for other types of objects than meshes.
It will be fixed when a developer will take time to review curves. But for the moment, most of work done was focusing on meshes, armatures and new grease pencil objects.

I got it. I was just explaining that mesh from curve is not the only thing about curve that does not work as it should. Beveled Curves are not supposed to behave like that. And several other things don't work as they should for other types of objects than meshes. It will be fixed when a developer will take time to review curves. But for the moment, most of work done was focusing on meshes, armatures and new grease pencil objects.

Added subscriber: @Marco-Neumann

Added subscriber: @Marco-Neumann
Member
Added subscribers: @szymi, @ChristopherAnderssarian, @lichtwerk

May i ask the developers to fix curve conversion to mesh,i uploaded this request before,please dear developers,i cannot use bevel curve with profile shape,because after conversion,only edges are left,i need this feature back to work,because i cannot sweep a window frame or any shape,this feature is hugely important for me,without it,i am unable to create advanced,lofted shape,nurbs surface also are not visible in the viewport in Blender 2.80 - build from 22.11.2018

May i ask the developers to fix curve conversion to mesh,i uploaded this request before,please dear developers,i cannot use bevel curve with profile shape,because after conversion,only edges are left,i need this feature back to work,because i cannot sweep a window frame or any shape,this feature is hugely important for me,without it,i am unable to create advanced,lofted shape,nurbs surface also are not visible in the viewport in Blender 2.80 - build from 22.11.2018
Member

Added subscriber: @Enside

Added subscriber: @Enside

This issue was referenced by 98ecab1af0

This issue was referenced by 98ecab1af07a6f8f31b7889d1da92593deb87ae2
Bastien Montagne self-assigned this 2018-11-28 18:14:50 +01:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Blender Developpers - THANK YOU FOR BIG EFFORT - now i can convert curve to mesh!

Blender Developpers - THANK YOU FOR BIG EFFORT - now i can convert curve to mesh!

{F5760850}thank you - conversion to mesh from curve works - thank you - i am appreciate of your work{F5760908}

{[F5760850](https://archive.blender.org/developer/F5760850/Blender_developers_-_thank_you_for_fixing_-_curve_convert_to_mesh_bug.mov)}thank you - conversion to mesh from curve works - thank you - i am appreciate of your work{[F5760908](https://archive.blender.org/developer/F5760908/Blender_developers_-_thank_you_for_fixing_-_curve_convert_to_mesh_bug.mov)}

Added subscriber: @Hickz

Added subscriber: @Hickz

This is broken again

This is broken again

Added subscriber: @Varlam

Added subscriber: @Varlam

Confirm. broken again. Today build 24.05.

Confirm. broken again. Today build 24.05.

There is not much point in re-activating closed tasks like that, it is fairly unlikely to be the same issue actually( even though the symptoms are the same, code has changed quiet a bit since then).

FYI, we already have a (new) task about that issue: #65052

There is not much point in re-activating closed tasks like that, it is fairly unlikely to be the same issue actually( even though the symptoms are the same, code has changed quiet a bit since then). FYI, we already have a (new) task about that issue: #65052

Added subscriber: @bugsbe

Added subscriber: @bugsbe

Just chiming making flat objects then making them 3dish in blender 2.8 is a huge mess.

And can someone please do something about the headache inducing grey on grey?

Just chiming making flat objects then making them 3dish in blender 2.8 is a huge mess. And can someone please do something about the headache inducing grey on grey?

Added subscriber: @Anthony-Attwood

Added subscriber: @Anthony-Attwood

Just here to repoer that it still doesn't work but a work-around is to select the beveled curves, export selection as obj then import the obj.

Just here to repoer that it still doesn't work but a work-around is to select the beveled curves, export selection as obj then import the obj.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
11 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56906
No description provided.