source/blender/blenkernel/intern/object_update.c
@@ -225,7 +225,7 @@ void BKE_object_handle_data_update(
 		case OB_CURVE:
 		case OB_SURF:
 		case OB_FONT:
-			BKE_displist_make_curveTypes(depsgraph, scene, ob, 0);
+			BKE_displist_make_curveTypes(depsgraph, scene, ob, false, false);
 			break;
 
 		case OB_LATTICE:
